--- a/KOscores.html
+++ b/KOscores.html
@@ -53,9 +53,8 @@
             background-color: #333333;
         }
 
-        .stage-separator td {
+        td.stage-cell {
             border-bottom: 2px solid #444444;
-            padding: 0;
         }
 
         select {
@@ -117,11 +116,8 @@
         </thead>
         <tbody>
             <!-- QF Rows -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td rowspan="8">QF</td>
+                <td rowspan="8" class="stage-cell">QF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -146,11 +142,8 @@
                 <td>QT 8</td>
             </tr>
             <!-- SF Rows -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td rowspan="4">SF</td>
+                <td rowspan="4" class="stage-cell">SF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -163,36 +156,24 @@
                 <td>QT 4</td>
             </tr>
             <!-- F Rows -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td rowspan="2">F</td>
+                <td rowspan="2" class="stage-cell">F</td>
                 <td>QT 1</td>
             </tr>
             <tr>
                 <td>QT 2</td>
             </tr>
             <!-- Champion Row -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td colspan="2">Champion</td>
+                <td colspan="2" class="stage-cell">Champion</td>
             </tr>
             <!-- Golden Boot Row -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td colspan="2">Golden Boot</td>
+                <td colspan="2" class="stage-cell">Golden Boot</td>
             </tr>
             <!-- Top Player Row -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td colspan="2">Top Player</td>
+                <td colspan="2" class="stage-cell">Top Player</td>
             </tr>
         </tbody>
     </table>
@@ -300,35 +281,35 @@
                 // Populate QF
                 for (let i = 0; i < 8; i++) {
                     const data = getCellData(qfStartRow + i, 3, 5);
-                    const row = tbody.querySelectorAll('tr')[i + 1]; // Adjust index for separator row
+                    const row = tbody.querySelectorAll('tr')[i];
                     appendCells(row, data, index);
                 }
 
                 // Populate SF
                 for (let i = 0; i < 4; i++) {
                     const data = getCellData(sfStartRow + i, 3, 5);
-                    const row = tbody.querySelectorAll('tr')[10 + i]; // Adjust index for separator rows
+                    const row = tbody.querySelectorAll('tr')[8 + i];
                     appendCells(row, data, index);
                 }
 
                 // Populate F
                 for (let i = 0; i < 2; i++) {
                     const data = getCellData(fStartRow + i, 3, 5);
-                    const row = tbody.querySelectorAll('tr')[15 + i]; // Adjust index for separator rows
+                    const row = tbody.querySelectorAll('tr')[12 + i];
                     appendCells(row, data, index);
                 }
 
                 // Populate Champion
                 const championData = getCellData(championRow, 3, 5);
-                appendCells(tbody.querySelectorAll('tr')[19], championData, index); // Adjust index for separator rows
+                appendCells(tbody.querySelectorAll('tr')[14], championData, index);
 
                 // Populate Golden Boot
                 const goldenBootData = getCellData(goldenBootRow, 1, 5);
-                appendCells(tbody.querySelectorAll('tr')[21], goldenBootData, index); // Adjust index for separator rows
+                appendCells(tbody.querySelectorAll('tr')[15], goldenBootData, index);
 
                 // Populate Top Player
                 const topPlayerData = getCellData(topPlayerRow, 1, 5);
-                appendCells(tbody.querySelectorAll('tr')[23], topPlayerData, index); // Adjust index for separator rows
+                appendCells(tbody.querySelectorAll('tr')[16], topPlayerData, index);
             }
 
             function appendCells(row, data, index) {
