--- a/KOscores.html
+++ b/KOscores.html
@@ -142,8 +142,11 @@
                 <td>QT 8</td>
             </tr>
             <!-- SF Rows -->
+            <tr class="stage-separator">
+                <td colspan="2"></td>
+            </tr>
             <tr>
-                <td rowspan="4" class="stage-cell">SF</td>
+                <td rowspan="4">SF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -156,24 +159,36 @@
                 <td>QT 4</td>
             </tr>
             <!-- F Rows -->
+            <tr class="stage-separator">
+                <td colspan="2"></td>
+            </tr>
             <tr>
-                <td rowspan="2" class="stage-cell">F</td>
+                <td rowspan="2">F</td>
                 <td>QT 1</td>
             </tr>
             <tr>
                 <td>QT 2</td>
             </tr>
             <!-- Champion Row -->
+            <tr class="stage-separator">
+                <td colspan="2"></td>
+            </tr>
             <tr>
-                <td colspan="2" class="stage-cell">Champion</td>
+                <td colspan="2">Champion</td>
             </tr>
             <!-- Golden Boot Row -->
+            <tr class="stage-separator">
+                <td colspan="2"></td>
+            </tr>
             <tr>
-                <td colspan="2" class="stage-cell">Golden Boot</td>
+                <td colspan="2">Golden Boot</td>
             </tr>
             <!-- Top Player Row -->
+            <tr class="stage-separator">
+                <td colspan="2"></td>
+            </tr>
             <tr>
-                <td colspan="2" class="stage-cell">Top Player</td>
+                <td colspan="2">Top Player</td>
             </tr>
         </tbody>
     </table>
