--- a/KOscores.html
+++ b/KOscores.html
@@ -142,11 +142,8 @@
                 <td>QT 8</td>
             </tr>
             <!-- SF Rows -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td rowspan="4">SF</td>
+                <td rowspan="4" class="stage-cell">SF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -159,36 +156,24 @@
                 <td>QT 4</td>
             </tr>
             <!-- F Rows -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td rowspan="2">F</td>
+                <td rowspan="2" class="stage-cell">F</td>
                 <td>QT 1</td>
             </tr>
             <tr>
                 <td>QT 2</td>
             </tr>
             <!-- Champion Row -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td colspan="2">Champion</td>
+                <td colspan="2" class="stage-cell">Champion</td>
             </tr>
             <!-- Golden Boot Row -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td colspan="2">Golden Boot</td>
+                <td colspan="2" class="stage-cell">Golden Boot</td>
             </tr>
             <!-- Top Player Row -->
-            <tr class="stage-separator">
-                <td colspan="2"></td>
-            </tr>
             <tr>
-                <td colspan="2">Top Player</td>
+                <td colspan="2" class="stage-cell">Top Player</td>
             </tr>
         </tbody>
     </table>
