--- a/KOscores.html
+++ b/KOscores.html
@@ -143,7 +143,7 @@
             </tr>
             <!-- SF Rows -->
             <tr>
-                <td rowspan="4" class="stage-cell">SF</td>
+                <td rowspan="4" colspan="8" class="stage-cell">SF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
