--- a/KOscores.html
+++ b/KOscores.html
@@ -40,7 +40,6 @@
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 10px;
-            table-layout: fixed;
         }
 
         th,
@@ -56,7 +55,6 @@
 
         td.stage-cell {
             border-bottom: 2px solid #444444;
-            width: 100%;
         }
 
         select {
@@ -119,7 +117,9 @@
         <tbody>
             <!-- QF Rows -->
             <tr>
-                <td rowspan="8" class="stage-cell">QF</td>
+                <td class="stage-cell" colspan="100%">QF</td>
+            </tr>
+            <tr>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -145,7 +145,9 @@
             </tr>
             <!-- SF Rows -->
             <tr>
-                <td rowspan="4" class="stage-cell">SF</td>
+                <td class="stage-cell" colspan="100%">SF</td>
+            </tr>
+            <tr>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -159,7 +161,9 @@
             </tr>
             <!-- F Rows -->
             <tr>
-                <td rowspan="2" class="stage-cell">F</td>
+                <td class="stage-cell" colspan="100%">F</td>
+            </tr>
+            <tr>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -283,35 +287,35 @@
                 // Populate QF
                 for (let i = 0; i < 8; i++) {
                     const data = getCellData(qfStartRow + i, 3, 5);
-                    const row = tbody.querySelectorAll('tr')[i];
+                    const row = tbody.querySelectorAll('tr')[i + 1];
                     appendCells(row, data, index);
                 }
 
                 // Populate SF
                 for (let i = 0; i < 4; i++) {
                     const data = getCellData(sfStartRow + i, 3, 5);
-                    const row = tbody.querySelectorAll('tr')[8 + i];
+                    const row = tbody.querySelectorAll('tr')[9 + i];
                     appendCells(row, data, index);
                 }
 
                 // Populate F
                 for (let i = 0; i < 2; i++) {
                     const data = getCellData(fStartRow + i, 3, 5);
-                    const row = tbody.querySelectorAll('tr')[12 + i];
+                    const row = tbody.querySelectorAll('tr')[14 + i];
                     appendCells(row, data, index);
                 }
 
                 // Populate Champion
                 const championData = getCellData(championRow, 3, 5);
-                appendCells(tbody.querySelectorAll('tr')[14], championData, index);
+                appendCells(tbody.querySelectorAll('tr')[16], championData, index);
 
                 // Populate Golden Boot
                 const goldenBootData = getCellData(goldenBootRow, 1, 5);
-                appendCells(tbody.querySelectorAll('tr')[15], goldenBootData, index);
+                appendCells(tbody.querySelectorAll('tr')[17], goldenBootData, index);
 
                 // Populate Top Player
                 const topPlayerData = getCellData(topPlayerRow, 1, 5);
-                appendCells(tbody.querySelectorAll('tr')[16], topPlayerData, index);
+                appendCells(tbody.querySelectorAll('tr')[18], topPlayerData, index);
             }
 
             function appendCells(row, data, index) {
