--- a/adminpage.html
+++ b/adminpage.html
@@ -67,21 +67,20 @@
             right: 10px;
             font-size: 0.8em;
             color: #484747;
-            background-color: #1e1e1e;
+            background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
 
         select {
-            background-color: #6b6a6a;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
             padding: 10px 20px;
             margin-top: 10px;
             border: 1px solid #444444;
             cursor: pointer;
             height: 36px;
-            width: 200px;
         }
 
         table {
@@ -114,6 +113,15 @@
             margin-top: 20px;
         }
 
+        select {
+            width: 200px;
+            background-color: #6b6a6a;
+            color: #fff;
+            border: 1px solid #444444;
+            margin: 10px;
+            height: 36px;
+        }
+
         .error-message {
             color: red;
             font-weight: bold;
@@ -121,19 +129,6 @@
         }
 
         .capture-button {
-            background-color: rgb(88, 87, 87);
-            color: black;
-            padding: 5px 5px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border: none;
-        }
-
-        .save-button {
             background-color: rgb(88, 87, 87);
             color: black;
             padding: 5px 5px;
@@ -160,8 +155,7 @@
         <ul class="menu">
             <li><a href="./ranks.html">Rankings</a></li>
             <li><a href="./comp2euros.html">Euro2024 Results</a></li>
-            <li><a href="./group_gbyg.html">Group Stages Results</a></li>
-            <li><a href="./KOscores.html">KO Stages Results</a></li>
+            <li><a href="./all_predictions.html">Game by Game Points</a></li>
             <li><a href="./pvsp.html">Player vs Player</a></li>
             <li><a href="./all_predictions.html">Download All Predictions</a></li>
             <li><a href="./predictform.html">Prediction Form</a></li>
@@ -195,56 +189,10 @@
                     const csvData = await csvResponse.text();
                     const participantRows = csvData.split('\n').map(row => row.split(','));
 
-                    participantCSV += 'Group Stage\n';
-                    participantCSV += 'Group A,Team 1,,Team 2,,Point\n';
+                    participantCSV += 'Group Stage\n'
+                    participantCSV += 'Group A,Team 1,,Team 2,,Point\n'
 
                     for (let i = 2; i < 8; i++) {
-                        const row = actualResultsRows[i];
-                        const date = row[0];
-                        const team1 = row[1] || '';
-                        const team2 = row[3] || '';
-                        const actualScore1 = row[2] || '';
-                        const actualScore2 = row[4] || '';
-
-                        let participantScore = '';
-                        let predictedScore1 = '';
-                        let predictedScore2 = '';
-
-                        for (const pRow of participantRows) {
-                            if (pRow.includes(team1) && pRow.includes(team2)) {
-                                const country1Index = pRow.indexOf(team1);
-                                const country2Index = pRow.indexOf(team2);
-                                predictedScore1 = pRow[country1Index + 1];
-                                predictedScore2 = pRow[country2Index + 1];
-                                if (actualScore1 && actualScore2) {
-                                    const actual1 = parseInt(actualScore1);
-                                    const actual2 = parseInt(actualScore2);
-                                    const predicted1 = parseInt(predictedScore1);
-                                    const predicted2 = parseInt(predictedScore2);
-
-                                    if (predicted1 === actual1 && predicted2 === actual2) {
-                                        participantScore = 10;
-                                    } else if ((actual1 - actual2 === predicted1 - predicted2) &&
-                                        ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predicted2))) {
-                                        participantScore = 8;
-                                    } else if (actual1 === actual2 && predicted1 === predicted2) {
-                                        participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predicted2)) {
-                                        participantScore = 5;
-                                    } else {
-                                        participantScore = 0;
-                                    }
-                                }
-                                break;
-                            }
-                        }
-                        participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
-                    }
-
-                    participantCSV += '\n';
-                    participantCSV += 'Group B\n';
-
-                    for (let i = 10; i < 16; i++) {
                         const row = actualResultsRows[i];
                         const date = row[0];
                         const team1 = row[1] || '';
@@ -287,8 +235,54 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Group C\n';
+                    participantCSV += "\n"
+                    participantCSV += "Group B\n"
+
+                    for (let i = 10; i < 16; i++) {
+                        const row = actualResultsRows[i];
+                        const date = row[0];
+                        const team1 = row[1] || '';
+                        const team2 = row[3] || '';
+                        const actualScore1 = row[2] || '';
+                        const actualScore2 = row[4] || '';
+
+                        let participantScore = '';
+                        let predictedScore1 = '';
+                        let predictedScore2 = '';
+
+                        for (const pRow of participantRows) {
+                            if (pRow.includes(team1) && pRow.includes(team2)) {
+                                const country1Index = pRow.indexOf(team1);
+                                const country2Index = pRow.indexOf(team2);
+                                predictedScore1 = pRow[country1Index + 1];
+                                predictedScore2 = pRow[country2Index + 1];
+                                if (actualScore1 && actualScore2) {
+                                    const actual1 = parseInt(actualScore1);
+                                    const actual2 = parseInt(actualScore2);
+                                    const predicted1 = parseInt(predictedScore1);
+                                    const predicted2 = parseInt(predictedScore2);
+
+                                    if (predicted1 === actual1 && predicted2 === actual2) {
+                                        participantScore = 10;
+                                    } else if ((actual1 - actual2 === predicted1 - predicted2) &&
+                                        ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predicted2))) {
+                                        participantScore = 8;
+                                    } else if (actual1 === actual2 && predicted1 === predicted2) {
+                                        participantScore = 5;
+                                    } else if ((actual1 > actual2 && predicted1 > predictedScore2) || (actual1 < actual2 && predicted1 < predictedScore2)) {
+                                        participantScore = 5;
+                                    } else {
+                                        participantScore = 0;
+                                    }
+                                }
+                                break;
+                            }
+                        }
+                        participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
+                    }
+
+                    participantCSV += "\n"
+                    participantCSV += "Group C\n"
 
                     for (let i = 18; i < 24; i++) {
                         const row = actualResultsRows[i];
@@ -333,8 +327,8 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Group D\n';
+                    participantCSV += "\n"
+                    participantCSV += "Group D\n"
 
                     for (let i = 26; i < 32; i++) {
                         const row = actualResultsRows[i];
@@ -379,8 +373,8 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Group E\n';
+                    participantCSV += "\n"
+                    participantCSV += "Group E\n"
 
                     for (let i = 34; i < 40; i++) {
                         const row = actualResultsRows[i];
@@ -425,8 +419,8 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Group F\n';
+                    participantCSV += "\n"
+                    participantCSV += "Group F\n"
 
                     for (let i = 42; i < 48; i++) {
                         const row = actualResultsRows[i];
@@ -471,9 +465,9 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'KO Stage\n';
-                    participantCSV += 'Round of 16,Team 1,Team 2,Winner,,Point\n';
+                    participantCSV += "\n"
+                    participantCSV += "KO Stage\n"
+                    participantCSV += 'Round of 16,Team 1,Team 2,Winner,,Point\n'
 
                     for (let i = 51; i < 59; i++) {
                         const row = participantRows[i];
@@ -498,8 +492,8 @@
                         participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Quarterfinals\n';
+                    participantCSV += "\n"
+                    participantCSV += "Quarterfinals\n"
 
                     for (let i = 61; i < 65; i++) {
                         const row = participantRows[i];
@@ -524,8 +518,8 @@
                         participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Semifinals\n';
+                    participantCSV += "\n"
+                    participantCSV += "Semifinals\n"
 
                     for (let i = 67; i < 69; i++) {
                         const row = participantRows[i];
@@ -547,8 +541,8 @@
                         participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
                     }
 
-                    participantCSV += '\n';
-                    participantCSV += 'Final\n';
+                    participantCSV += "\n"
+                    participantCSV += "Final\n"
 
                     // Process line 72
                     const row = participantRows[71]; // Row 72 in the file (0-based index 71)
@@ -568,8 +562,8 @@
                     }
                     participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
 
-                    participantCSV += '\n';
-                    participantCSV += 'Top Players\n';
+                    participantCSV += "\n"
+                    participantCSV += "Top Players\n"
 
                     for (let i = 74; i < 77; i++) {
                         const row = participantRows[i];
