--- a/KOscores.html
+++ b/KOscores.html
@@ -57,6 +57,7 @@
         td.stage-cell {
             border-bottom: 2px solid #444444;
             width: 100%;
+            align-content: top;
         }
 
         select {
