--- a/KOscores.html
+++ b/KOscores.html
@@ -148,6 +148,9 @@
             <tr>
                 <td colspan="2"></td>
             </tr>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
             <!-- SF Rows -->
             <tr>
                 <td rowspan="4" class="stage-cell">SF</td>
